--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # datasource
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://192.168.1.104:5432/4pteste
+spring.datasource.url=jdbc:postgresql://localhost:5432/4pteste
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=root
 
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
