--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # datasource
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://192.168.1.104:5432/4pteste
+spring.datasource.url=jdbc:postgresql://192.168.1.104:5432/4p
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
