--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 # datasource
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://192.168.1.104:5432/4p
+spring.datasource.url=jdbc:postgresql://localhost:5432/4p_operation_teste_2
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.datasource.hikari.schema=report
+
+server.port=8082
 
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
